base/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  namespace: default
spec:
  selector:
    app: express
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
