base/express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: echo.lstats.me
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: express-service
                port:
                  number: 80
